# interface_master

./: .buildinfo  .flake8  .gitignore  .pre-commit-config.yaml  LICENSE.md  README.md  cellcalc.py  genindex.html  index.html  install.html  interface_generator.py  interfacemaster.html  objects.inv  py-modindex.html  requirements.txt  search.html  searchindex.js  setup.cfg  setup.py  tutorials.html
.devcontainer/: Dockerfile  devcontainer.json  requirements.txt
.doctrees/: environment.pickle  index.doctree  install.doctree  interfacemaster.doctree  tutorials.doctree
_modules/: index.html
_sources/: install.rst.txt
docs/: conf.py  index.rst  interfacemaster.rst  tutorials  tutorials.rst
fastapi_app/: app.py  requirements.txt
flask_app/: app.py
interfacemaster/: __version__.py  brute_force.py  cellcalc.py  hetero_searching.py  interface_generator.py  run_brute_force_symmetric_tilt.py  symmetric_tilt.py  tool.py
interfacemaster.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
test_files/: .cif.cif  CSL  POSCAR  Sampling_deleting_atoms.ipynb  Silicon_sigma9_sym_cnid.ipynb  Tutorial_Making bicrystal for a known GB - CIS twinning - Approximate.ipynb  Tutorial_Making bicrystal for a known GB - Co - Approximate.ipynb  Tutorial_Making bicrystal for a known GB - LPGS .ipynb  Tutorial_Making bicrystal for a known GB - STO twist - exact.ipynb  Tutorial_Making bicrystal for a known GB - Si symmetric tilt - exact.ipynb  Tutorial_Making bicrystal for a known GB - Si symmetric tilt.ipynb  Tutorial_Making bicrystal for a known GB - Si twist - exact.ipynb  (+47 more)
(+111 files in other folders)
