[metadata]
name = interfacemaster
version = attr: interfacemaster.__version__.__version__
description = A program of calculating interface structure
license = MIT
author = Yaoshu Xie
author_email = ysxie@iis.u-tokyo.ac.jp
url = https://github.com/nmdl-mizo/interface_master

[options]
python_requires = >= 3
packages = find:
install_requires = 
    pymatgen
    matplotlib
    gb_code